--- a/src/frontend/styles/components/state.styl
+++ b/src/frontend/styles/components/state.styl
@@ -69,6 +69,10 @@
   white-space: nowrap
 
 .value-view
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+
   .value-error
     margin-left: 1.0625em !important
     position: inherit
